--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -22,7 +22,7 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS"></uses-permission>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application android:label="@string/app_name"
-        android:icon="@drawable/icon">
+        android:icon="@drawable/icon" android:theme="@android:style/Theme.Black.NoTitleBar">
         <activity android:name="DemoActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
