Add the target jar to build a JAR file

--- a/build.xml
+++ b/build.xml
@@ -80,4 +80,11 @@
     <path id="android.libraries.src"><path refid="project.libraries.src" /></path>
     <path id="android.libraries.jars"><path refid="project.libraries.jars" /></path>
 
+	<target name="jar" depends="compile">
+	    <jar
+	        destfile="bin/pixmob-appengine-client.jar"
+	        basedir="bin/classes"
+	    />
+	</target>
+
 </project>
