--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pixmob.appengine.client" android:versionCode="11"
-    android:versionName="1.1">
+    package="org.pixmob.appengine.client" android:versionCode="12"
+    android:versionName="1.2">
     <uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7"></uses-sdk>
 </manifest> 
