--- a/demo/AndroidManifest.xml
+++ b/demo/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2011 Alexandre Roman
+<!-- Copyright (C) 2011 Pixmob (http://github.com/pixmob)
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,8 +14,8 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pixmob.appengine.client.demo" android:versionCode="1"
-    android:versionName="1.0">
+    package="org.pixmob.appengine.client.demo" android:versionCode="11"
+    android:versionName="1.1">
     <uses-sdk android:targetSdkVersion="8"
         android:minSdkVersion="7"></uses-sdk>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"></uses-permission>
